@@ -1,4 +1,3 @@
-blibdirs
 ChangeLog
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
